fix so visible without scrolling

--- a/style.css
+++ b/style.css
@@ -21,7 +21,7 @@ body {
     gap: 2vw;
     /* This is calculated based on the grid and gap values for the board! */
     /* Necessary to get top, board, and bottom aligned and justified */
-    width: 450px;
+    width: 360px;
     flex-wrap: wrap;
 }
 
@@ -98,17 +98,17 @@ margin-bottom: 0.3rem;
 #board-area {
     display: grid;
     grid-template-columns: repeat(4, 1fr);
-    gap: 10px;
+    gap: 8px;
     background-color: #bbada0;
-    padding: 10px;
+    padding: 8px;
     border-radius: 10px;
     width: auto;
 }
 
 .board-cell {
     background-color: #cdc1b4;
-    width: 100px;
-    height: 100px;
+    width: 80px;
+    height: 80px;
     display: flex;
     justify-content: center;
     align-items: center;
